[package]
name = "hobogo"
version = "0.2.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.7", features = ['small_rng', 'wasm-bindgen'] }
serde = "1"
serde_derive = "1"
serde_json = "1"
wasm-bindgen = "0.2"

egui = { git = "https://github.com/emilk/emigui" }
egui_web = { git = "https://github.com/emilk/emigui" }
# egui = { path = "../emigui/egui" }
# egui_web = { path = "../emigui/egui_web" }

# Optimize for small code size:
[profile.release]
opt-level = 2
