[package]
name = "hobogo"
version = "0.2.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.7", features = ['small_rng', 'wasm-bindgen'] }
serde = "1"
serde_derive = "1"
serde_json = "1"
wasm-bindgen = "0.2"

egui = "0.3.0"
egui_web = "0.3.0"
# egui = { path = "../egui/egui" }
# egui_web = { path = "../egui/egui_web" }

# Optimize for small code size:
[profile.release]
opt-level = 2
